--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reac-apple-signin",
   "private": true,
   "version": "0.0.1",
-  "description": "",
+  "description": " Apple signin for React using the official Apple JS SDK",
   "author": {
     "name": "Ahmed Tarek",
     "email": "ahmed.tokyo1@gmail.com",
