--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "url": "https://github.com/a-tokyo/react-apple-signin/issues"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-dev-server --mode development",
     "transpile": "babel src -d dist --copy-files",
     "prepublishOnly": "npm run transpile",
@@ -39,8 +39,12 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/jest-dom": "^5.11.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^2.9.0",
@@ -55,12 +59,14 @@
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "jest-cli": "^26.4.2",
+    "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.4.0",
     "plato": "^1.7.0",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-syntax-highlighter": "^13.5.3",
+    "regenerator-runtime": "^0.13.7",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
