--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reac-apple-signin",
+  "name": "react-apple-signin",
   "private": true,
   "version": "0.0.1",
   "description": " Apple signin for React using the official Apple JS SDK",
