--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-apple-signin",
+  "name": "react-apple-signin-auth",
   "version": "0.0.1",
   "description": " Apple signin for React using the official Apple JS SDK",
   "author": {
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/a-tokyo/react-apple-signin.git"
+    "url": "https://github.com/a-tokyo/react-apple-signin-auth.git"
   },
   "main": "dist/index.js",
   "files": [
     "dist/"
   ],
-  "homepage": "https://github.com/a-tokyo/react-apple-signin#readme",
+  "homepage": "https://github.com/a-tokyo/react-apple-signin-auth#readme",
   "bugs": {
-    "url": "https://github.com/a-tokyo/react-apple-signin/issues"
+    "url": "https://github.com/a-tokyo/react-apple-signin-auth/issues"
   },
   "scripts": {
     "start": "webpack-dev-server --mode development",
@@ -44,17 +44,17 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^5.3.0",
+    "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.11.0",
     "flow-bin": "^0.135.0",
     "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "jest-cli": "^26.4.2",
