:books: add docs

--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -51,4 +51,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Deploy Demo
-        run: NODE_ENV=production yarn deploy
+        run: |
+          git config --local user.email "$(git log --format='%ae' HEAD^!)"
+          git config --local user.name "$(git log --format='%an' HEAD^!)"
+          NODE_ENV=production yarn deploy
