--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/preset-flow": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react-hooks": "^3.4.2",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
