--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -42,19 +42,16 @@ jobs:
           # Set COMMIT_LOG
           COMMIT_LOG=`git log $(git describe --tags --abbrev=0)..HEAD --format='%s - %an'`
           echo ::set-output name=COMMIT_LOG::$COMMIT_LOG
-      # - uses: ncipollo/release-action@v1
-      #   with:
-      #     token: ${{ secrets.GITHUB_TOKEN }}
-      #     tag: ${{ steps.ownEnvVars.outputs.PACKAGE_VERSION }}
-      #     commit: main
-      #     body: ${{ steps.ownEnvVars.outputs.COMMIT_LOG }}
-      # - name: npm publish
-      #   run: npm publish
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - uses: oleksiyrudenko/gha-git-credentials@v1
+      - uses: ncipollo/release-action@v1
         with:
-          token: '${{ secrets.GITHUB_TOKEN }}'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.ownEnvVars.outputs.PACKAGE_VERSION }}
+          commit: main
+          body: ${{ steps.ownEnvVars.outputs.COMMIT_LOG }}
+      - name: npm publish
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
