--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react-hooks": "^3.4.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react-native": "^3.10.0",
     "flow-bin": "^0.135.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
