--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -59,7 +59,7 @@
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "husky": "^4.3.0",
-    "jest": "^26.4.2",
+    "jest": "^26.6.3",
     "jest-cli": "^26.4.2",
     "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.4.0",
@@ -68,6 +68,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-syntax-highlighter": "^13.5.3",
+    "react-test-renderer": "^17.0.1",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.2",
