:zap: dependabot automerge no release

--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -54,6 +54,7 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        if: github.event.pull_request.user.login != 'dependabot'
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
