--- a/.github/workflows/test-publish.yml
+++ b/.github/workflows/test-publish.yml
@@ -1,19 +1,14 @@
 name: Test Release Publish
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  test_release_publish:
-    name: Running tests and releasing to NPM and deploying demo
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}
+      - uses: actions/checkout@v1
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -31,8 +26,34 @@ jobs:
         run: yarn install
       - name: Test
         run: yarn test --ci --bail
-      - name: Lint
-        run: yarn eslint .
+      - name: Test TypeScript Type Definitions
+        run: yarn test:typescript
+      - name: Build
+        run: NODE_ENV=production yarn build
+
+  release_publish:
+    name: Release to Github and publish to NPM
+    runs-on: ubuntu-latest
+    needs: test
+    if: success() && github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ubuntu-latest-node-12.x-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ubuntu-latest-node-12.x-yarn-
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+          registry-url: https://registry.npmjs.org/
+      - name: Install
+        run: yarn install
       - name: Build
         run: NODE_ENV=production yarn build
       - name: Setup env vars
@@ -54,13 +75,3 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        if: github.event.pull_request.user.login != 'dependabot'
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          directory: ./coverage # optional
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./demo/dist
