--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/react-hooks": "^7.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
