--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "files": [
     "dist/"
   ],
-  "homepage": "https://github.com/a-tokyo/react-apple-signin-auth#readme",
+  "homepage": "https://react-apple-signin-auth.ahmedtokyo.com",
   "bugs": {
     "url": "https://github.com/a-tokyo/react-apple-signin-auth/issues"
   },
