--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-apple-signin-auth",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": " Apple signin for React using the official Apple JS SDK",
   "author": {
     "name": "Ahmed Tarek",
@@ -16,7 +16,7 @@
   "files": [
     "dist/"
   ],
-  "homepage": "https://github.com/a-tokyo/react-apple-signin-auth#readme",
+  "homepage": "https://react-apple-signin-auth.ahmedtokyo.com",
   "bugs": {
     "url": "https://github.com/a-tokyo/react-apple-signin-auth/issues"
   },
